--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+    rel="stylesheet"
+  />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gra memory - projekt</title>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
